- Work on dashboard view - Config for various assets - Adds assets

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,23 @@
 </head>
 <body>
 
-<%= yield %>
+<header id="has-logo" class="row">
+  logo
+</header>
+
+<header id="has-navigation" class="row">
+  <ul id="is-navigation">
+    <li>Redeem Now</li>
+    <li>FAQ</li>
+    <li>Contact Us</li>
+    <li>Customer Service</li>
+    <li>Back to MyWeis Account</li>
+  </ul>
+</header>
+
+<section class="row">
+  <%= yield %>
+</section>
 
 </body>
 </html>
