--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,15 +1,23 @@
 <div class="large-6 medium-6 small-12 columns bordered">
   <h1 class="pod-header">My<span class="red">Reward</span>Bucks</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+  <dl id="has-rewards">
+    <dt class="bucks-count">50 Bucks</dt>
+    <dd class="is-subhead">25 Bucks to go!</dd>
+    <dd class="is-fineprint">15% on the Dollar for Rewards Bucks
+      (i.e. $50 = $7.50 in Gold Card Rewards Bucks).
+      75 Bucks needed to redeem rewards. Learn More &#187;
+    </dd>
 </div>
 
 <div class="large-6 medium-6 small-12 columns bordered">
   <h1 class="pod-header"><span class="red">Rewards</span>Available</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+  <div class="button redeem red">
+    <h2>Redeem Now</h2>
+    <h4>You have 3 rewards available.</h4>
+  </div>
+  <div class="button redeem black">
+    <h4>View Rewards Catalog</h4>
+  </div>
 </div>
 
 <div class="large-6 medium-6 small-12 columns bordered">
@@ -40,4 +48,10 @@
 
 <div class="large-6 medium-6 small-12 columns bordered">
   <h1 class="pod-header">My<span class="red">Rewards</span>Earned</h1>
+  <p>This is an archive of times you have reached 75 bucks.</p>
+  <ul class="archive">
+    <li>February 1, 2014</li>
+    <li>December 17, 2013</li>
+    <li>December 4, 2013</li>
+  </ul>
 </div>
