--- a/app/assets/stylesheets/core/layout.scss
+++ b/app/assets/stylesheets/core/layout.scss
@@ -29,6 +29,7 @@ header {
   border: 10px solid #fff;
   background: #f5f5f5;
   @include border-radius(20px);
+  min-height: 19rem;
 
   h1 {
     @include border-radius(8px 8px 0 0);
@@ -61,6 +62,16 @@ ul#is-navigation {
   }
 }
 
+dl.has-login {
+  font-size: .8rem;
+  float: right;
+  line-height: .8rem;
+  margin-top: $base-padding/2;
+  .gold {
+    color: $gold;
+  }
+}
+
 
 /*---------------------------------------
   Forms
@@ -78,3 +89,11 @@ table.generic {
 /*---------------------------------------
   Footer
 ---------------------------------------*/
+
+footer {
+  background: #222;
+  margin-top: $base-padding/2;
+  .row {
+    padding: $base-padding 0;
+  }
+}
