--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,8 +1,8 @@
 <div class="large-6 medium-6 small-12 columns bordered">
   <h1 class="pod-header">My<span class="red">Reward</span>Bucks</h1>
   <dl id="has-rewards">
-    <dt class="bucks-count">50 Bucks</dt>
-    <dd class="is-subhead">25 Bucks to go!</dd>
+    <dt class="bucks-count"><%= @profile.current_reward_progress%></dt>
+    <dd class="is-subhead"><%= @profile.amount_remaining_for_current_reward %> to go!</dd>
     <dd class="is-fineprint">15% on the Dollar for Rewards Bucks
       (i.e. $50 = $7.50 in Gold Card Rewards Bucks).
       75 Bucks needed to redeem rewards. Learn More &#187;
@@ -13,35 +13,35 @@
   <h1 class="pod-header"><span class="red">Rewards</span>Available</h1>
   <div class="button redeem red">
     <h2>Redeem Now</h2>
-    <h4>You have 3 rewards available.</h4>
+    <h4>You have <%= @profile.rewards_count %> rewards available.</h4>
   </div>
   <div class="button redeem black">
     <h4>View Rewards Catalog</h4>
   </div>
 </div>
 
-<div class="large-6 medium-6 small-12 columns bordered">
+<div class="large-6 medium-6 small-12 columns bordered" id='profile'>
   <h1 class="pod-header">My<span class="red">Account</span></h1>
   <table class="generic">
     <tr>
       <td>Name</td>
-      <td>John Smith</td>
+      <td><%= @profile.full_name %></td>
     </tr>
     <tr>
       <td>Address</td>
-      <td>204 Any St.</td>
+      <td><%= @profile.street %></td>
     <tr>
     <tr>
       <td>City State Zip</td>
-      <td>Richmond, VA 23223</td>
+      <td><%= @profile.city_state_zip_code %></td>
     </tr>
     <tr>
       <td>Phone</td>
-      <td>(804) 555-1212</td>
+      <td><%= @profile.phone_number %></td>
     </tr>
     <tr>
       <td>Email</td>
-      <td>me@domain.com</td>
+      <td><%= @profile.email_address %></td>
     </tr>
   </table>
 </div>
@@ -50,8 +50,9 @@
   <h1 class="pod-header">My<span class="red">Rewards</span>Earned</h1>
   <p>This is an archive of times you have reached 75 bucks.</p>
   <ul class="archive">
-    <li>February 1, 2014</li>
-    <li>December 17, 2013</li>
-    <li>December 4, 2013</li>
+    <%- @profile.rewards.each do |reward| %>
+      <li><%= reward %></li>
+    <% end %>
   </ul>
 </div>
+
