Fix URL to site logo

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <header id="has-logo" class="row">
   <div class="large-6 medium-6 small-6 columns">
     <%=link_to root_path do %>
-      <%=image_tag ('/assets/logo.jpg') %>
+      <%=image_tag 'logo.jpg' %>
     <% end %>
   </div>
 
