- Adds FAQs - Adds Customer Service page - Adds Contact Page

--- a/app/assets/stylesheets/core/layout.scss
+++ b/app/assets/stylesheets/core/layout.scss
@@ -59,6 +59,9 @@ ul#is-navigation {
     padding: 0;
     margin: 0 $base-padding 0 0;
     line-height: 37px;
+    a {
+      color: #fff;
+    }
   }
 }
 
