--- a/app/views/home/faqs.html.erb
+++ b/app/views/home/faqs.html.erb
@@ -1,1 +1,26 @@
-<h1>FAQs</h1>
+<h3>FAQs</h3>
+<dl>
+  <dt>How do I earn Gold Bucks?</dt>
+  <dd>Present your Gold Card when you make a qualifying purchase at Weis Markets and earn 15% back in Gold Bucks.  Example: $100 Purchase = 15 Gold Bucks Earned</dd>
+
+  <dt>What items at Weis Markets do not qualify for Gold Bucks?</dt>
+  <dd>Fuel and Rx do not qualify to earn Gold Bucks</dd>
+
+  <dt>Is it required at the checkout line to present my Gold Card to earn Gold Bucks?</dt>
+  <dd>Yes. You must present your Gold Card when you make a qualifying purchase to earn Gold Bucks.</dd>
+
+  <dt>When may I start redeeming my Gold Bucks for member rewards?</dt>
+  <dd>As soon as you earn a total of 75 Gold Bucks you may redeem rewards. You may also participate in the daily Sweepstakes Giveaways at any time by visiting your rewards catalog to instantly earn free tickets. You may also participate in the daily Sweepstakes Giveaways by visiting your rewards catalog to instantly earn free tickets.</dd>
+
+  <dt>How will I know how many Gold Bucks I have earned and redeemed for Rewards?</dt>
+  <dd>Your home page will provide you with current Gold Bucks earned and those ready to redeem for rewards. You will also receive by e-mail a monthly e-Statement showing current Gold Bucks earned, redeemed, and remaining for that month.</dd>
+
+  <dt>How long does it take for new Gold Bucks to show in my account?</dt>
+  <dd>Following each qualifying purchase at Weis Markets, please allow up to two business days for newly earned Gold Bucks to be added to your account.</dd>
+
+  <dt>Do my Gold Bucks expire?</dt>
+  <dd>No. As long as you maintain Gold Member status they will not expire. If you were to lose your status as a Gold Card member, you will then have a 90 day grace period to redeem.</dd>
+
+  <dt>Can I cash in my Gold Bucks for real currency?</dt>
+  <dd>No.Your Gold Bucks can only be used to redeem rewards.</dd>
+</dl>
