--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,9 +16,9 @@
 <header id="has-navigation" class="row">
   <ul id="is-navigation">
     <li>Redeem Now</li>
-    <li>FAQ</li>
-    <li>Contact Us</li>
-    <li>Customer Service</li>
+    <li><%=link_to "Learn More", home_learn_more_path %></li>
+    <li><%=link_to "FAQs", home_faqs_path %></li>
+    <li><%=link_to "Customer Service", home_customer_service_path %></li>
     <li>Back to MyWeis Account</li>
   </ul>
 </header>
