- Adds images to several views

--- a/app/views/home/customer_service.html.erb
+++ b/app/views/home/customer_service.html.erb
@@ -1,6 +1,7 @@
 <h3>Customer Service</h3>
 <h5>Top 5 Frequently Asked Questions</h5>
 
+<%=image_tag('/assets/large.png', class: "right") %>
 <dl>
   <dt>1. How long does it take for my Gold Bucks to be deposited into my account?</dt>
   <dd>Please allow up to 2 business days following your grocery purchase.</dd>
