--- a/app/views/home/faqs.html.erb
+++ b/app/views/home/faqs.html.erb
@@ -1,4 +1,5 @@
 <h3>FAQs</h3>
+<%=image_tag('/assets/large-1.png', class: "right") %>
 <dl>
   <dt>How do I earn Gold Bucks?</dt>
   <dd>Present your Gold Card when you make a qualifying purchase at Weis Markets and earn 15% back in Gold Bucks.  Example: $100 Purchase = 15 Gold Bucks Earned</dd>
