--- a/app/views/home/learn_more.html.erb
+++ b/app/views/home/learn_more.html.erb
@@ -1,5 +1,5 @@
 <h3>About MyGoldBucks</h3>
-
+<%=image_tag('/assets/thumbnail.png', class: "right") %>
 <p>As a Gold Card member, you will now earn 15% back in Gold Bucks for every qualifying dollar you spend at Weis Markets.</p>
 
 <p>Example: $100 Purchase = 15 Gold Card Bucks earned</p>
