- Adds updates copy and images per June 26th BC message

--- a/app/views/home/customer_service.html.erb
+++ b/app/views/home/customer_service.html.erb
@@ -1,19 +1,21 @@
 <h3>Customer Service</h3>
 <h5>Top 5 Frequently Asked Questions</h5>
-
 <%=image_tag('/assets/large.png', class: "right") %>
-<dl>
-  <dt>1. How long does it take for my Gold Bucks to be deposited into my account?</dt>
-  <dd>Please allow up to 2 business days following your grocery purchase.</dd>
 
-  <dt>2. I forgot to present my shopper card at checkout; will I still earn Gold Bucks?</dt>
-  <dd>No. Your purchases can only be posted to your rewards account by presenting you card.</dd>
-  <dt>3. How many Gold Bucks do I need to redeem rewards?</dt>
-  <dd>As soon as you earn a total of 75 Gold Bucks you may redeem rewards.</dd>
+<dl>
+  <dt>1. How long does it take for my WeisBucks to be deposited into my account?</dt>
+  <dd>Please allow up to 2 business days following your most recent qualifying purchase.</dd>
+  <dt>2.  I did not have my Weis Shopper Card at checkout. Will I still earn my WeisBucks?</dt>
+  <dd>No. Your purchases will only qualify for WeisBucks by presenting your card (or providing the phone number associated with your account).</dd>
+  <dt>3. When will my WeisBucks be deposited into my account?</dt>
+  <dd>As soon as you spend $250 qualifying dollars you will earn 25 WeisBucks for Silver members or 75 WeisBucks for Gold members, which will be deposited into your account for rewards redemption.</dd>
   <dt>4. Where do I go to make changes to my member profile?</dt>
-  <dd>Profile changes can be made by going to your MyWeis (Back to MyWeis Account) account.</dd>
-  <dt>5. What items at Weis Markets do not qualify for the Rewards Program?</dt>
-  <dd>Fuel and Rx do not qualifying for the Rewards Program.</dd>
+  <dd>Profile changes may be made by going to your MyWeis account click here . (redirect “ Back to MyWeis Account”)</dd>
+  <dt>5. What purchases do not qualify for WeisRewards?</dt>
+  <dd>Fuel and Prescription Drugs do not qualify to earn WeisBucks.</dd>
 </dl>
 
 <p>To view a full list of questions and answers please click <%=link_to "here", home_faqs_path %>.</p>
+
+<h5>Questions or Comments?</h5>
+<p>Click <%=link_to "here", new_inquiry_path %> to contact us.
