--- a/app/views/inquiries/_form.html.erb
+++ b/app/views/inquiries/_form.html.erb
@@ -27,7 +27,9 @@
     <%= f.text_area :message %>
   </div>
 
+  <p>Please allow up to 24 hours for a Customer Service Representative to respond to your inquiry. </p>
+
   <div>
-    <%= f.submit "Send" %>
+    <%= f.submit "Send", class: "button", value: "Contact Us" %>
   </div>
 <% end %>
