--- a/app/views/home/faqs.html.erb
+++ b/app/views/home/faqs.html.erb
@@ -1,27 +1,27 @@
 <h3>FAQs</h3>
 <%=image_tag('/assets/large-1.png', class: "right") %>
 <dl>
-  <dt>How do I earn Gold Bucks?</dt>
-  <dd>Present your Gold Card when you make a qualifying purchase at Weis Markets and earn 15% back in Gold Bucks.  Example: $100 Purchase = 15 Gold Bucks Earned</dd>
+  <dt>How do I earn WeisBucks?</dt>
+  <dd>For every qualifying dollar you spend at Weis Markets you will earn WeisBucks. 
+Silver Preferred Club Card members will earn 10% back in WeisBucks ($50 purchase = 5 WeisBucks).
+Gold Card members will earn 30% back in WeisBucks ($50 purchase = 15 WeisBucks).</dd>
 
-  <dt>What items at Weis Markets do not qualify for Gold Bucks?</dt>
-  <dd>Fuel and Rx do not qualify to earn Gold Bucks</dd>
+<dt>What purchases do not qualify for WeisRewards?</dt>
+<dd>Fuel and Prescription Drugs do not qualify to earn WeisBucks.</dd>
 
-  <dt>Is it required at the checkout line to present my Gold Card to earn Gold Bucks?</dt>
-  <dd>Yes. You must present your Gold Card when you make a qualifying purchase to earn Gold Bucks.</dd>
+<dt>I forgot to present my Weis Shopper Card at check out. Will I still earn my WeisBucks?</dt>
 
-  <dt>When may I start redeeming my Gold Bucks for member rewards?</dt>
-  <dd>As soon as you earn a total of 75 Gold Bucks you may redeem rewards. You may also participate in the daily Sweepstakes Giveaways at any time by visiting your rewards catalog to instantly earn free tickets. You may also participate in the daily Sweepstakes Giveaways by visiting your rewards catalog to instantly earn free tickets.</dd>
+<dd>No. Your purchases will only be posted to your rewards account by presenting your card (or providing the phone number associated with your account).</dd>
 
-  <dt>How will I know how many Gold Bucks I have earned and redeemed for Rewards?</dt>
-  <dd>Your home page will provide you with current Gold Bucks earned and those ready to redeem for rewards. You will also receive by e-mail a monthly e-Statement showing current Gold Bucks earned, redeemed, and remaining for that month.</dd>
+<dt>When will my WeisBucks be deposited into my account?</dt>
+<dd>As soon as you spend $250 qualifying dollars you will earn 25 WeisBucks for Silver members or 75 for Gold members, which will be deposited into your account for rewards redemption.</dd>
 
-  <dt>How long does it take for new Gold Bucks to show in my account?</dt>
-  <dd>Following each qualifying purchase at Weis Markets, please allow up to two business days for newly earned Gold Bucks to be added to your account.</dd>
+<dt>How will I know how many WeisBucks I have earned and deposited for rewards redemption?</dt>
+<dd>Your account page will provide you with current WeisBucks earned and deposited for rewards redemption. You will also receive a monthly e-Statement showing current WeisBucks deposited, redeemed, and remaining.</dd>
 
-  <dt>Do my Gold Bucks expire?</dt>
-  <dd>No. As long as you maintain Gold Member status they will not expire. If you were to lose your status as a Gold Card member, you will then have a 90 day grace period to redeem.</dd>
+<dt>How long does it take for new WeisBucks to be added in my account?</dt>
+<dd>Following each qualifying purchase, please allow up to two business days for newly earned WeisBucks to be added to your account.</dd>
 
-  <dt>Can I cash in my Gold Bucks for real currency?</dt>
-  <dd>No.Your Gold Bucks can only be used to redeem rewards.</dd>
+<dt>Can I cash in my Gold Bucks for real currency?</dt>
+<dd>No. Your WeisBucks may only be used to redeem rewards.</dd>
 </dl>
