--- a/app/views/home/learn_more.html.erb
+++ b/app/views/home/learn_more.html.erb
@@ -1,11 +1,15 @@
 <h3>About MyGoldBucks</h3>
 <%=image_tag('/assets/thumbnail.png', class: "right") %>
-<p>As a Gold Card member, you will now earn 15% back in Gold Bucks for every qualifying dollar you spend at Weis Markets.</p>
 
-<p>Example: $100 Purchase = 15 Gold Card Bucks earned</p>
+<p>Weis shoppers earn more...with WeisRewards. As a loyal card holder, earning rewards is simple and fast.  Shop, earn, and redeem your WiseBucks on over 200,000 exclusive member- only offers such as hotel stays, brand name merchandise, gift cards, and local offers.
+For every qualifying dollar that you spend at Weis Markets you will earn WeisBucks. 
+Silver Preferred Club Card members will earn 10% back in WeisBucks ($50 purchase = 5 WeisBucks).</p>
 
-<p>To qualify for member rewards, simply earn 75 Gold Bucks and redeem for exclusive offerings on hotel stays, brand name merchandise, gift cards, local offers, and more.</p>
+<p>Gold Card members will earn 30% back in WeisBucks ($50 purchase = 15 WeisBucks).  
+WeisBucks will be displayed in your account and deposited once you have spent $250 qualifying dollars.</p>
 
-<p>You may also participate in the daily Sweepstakes Giveaways by visiting your rewards catalog to instantly earn free tickets. By using your available Gold Bucks you have the opportunity to redeem up to an additional 15 tickets per day.</p>
+<p>Silver Preferred Club Card members will receive a deposit of 25 WeisBucks for every $250 qualifying dollars.</p>
 
-<p>Continue to shop at Weis Markets and watch your Gold Bucks add up with access to unlimited rewards.</p>
+<p>Gold Card members will receive a deposit of 75 WeisBucks for every $250 qualifying dollars.</p>
+
+<p>Start redeeming rewards today with your complimentary deposit of 25 WeisBucks and continue as you earn more every time you shop at WeisMarkets.</p>
