Make sure the file uploads work correctly

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -5,7 +5,7 @@
     <dd class="is-subhead"><%= @profile.amount_remaining_for_current_reward %> to go!</dd>
     <dd class="is-fineprint">15% on the Dollar for Weis Bucks
       (i.e. $50 = $7.50 in Weis Bucks).
-      75 Bucks needed to redeem rewards. Learn More &#187;
+      <%= @profile.reward_threshold %> Bucks needed to redeem rewards. Learn More &#187;
     </dd>
 </div>
 
