Clean up profile display in header

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,10 +6,12 @@
   </div>
 
   <div class="large-6 medium-6 small-6 columns">
-    <dl class="has-login">
-      <dt>Welcome back, <%= current_customer.first_name %> | <%= link_to 'Log Out', '#' %></dt>
-      <dt class="gold">Available Gold Card Bucks: <%= current_customer.balance %></dt>
-    </dl>
+    <% if @profile %>
+      <dl class="has-login">
+        <dt>Welcome back, <%= @profile.first_name %> | <%= link_to 'Log Out', '#' %></dt>
+        <dt class="gold">Available <%= @profile.member_status %> Card Bucks: <%= @profile.current_reward_progress %></dt>
+      </dl>
+    <% end %>
   </div>
 </header>
 
