Copy updates for content pages

--- a/app/views/home/customer_service.html.erb
+++ b/app/views/home/customer_service.html.erb
@@ -8,9 +8,9 @@
   <dt>2.  I did not have my Weis Shopper Card at checkout. Will I still earn my WeisBucks?</dt>
   <dd>No. Your purchases will only qualify for WeisBucks by presenting your card (or providing the phone number associated with your account).</dd>
   <dt>3. When will my WeisBucks be deposited into my account?</dt>
-  <dd>As soon as you spend $250 qualifying dollars you will earn 25 WeisBucks for Silver members or 75 WeisBucks for Gold members, which will be deposited into your account for rewards redemption.</dd>
+  <dd>As soon as you spend $250 qualifying dollars you will earn 25 WeisBucks for Club members or 75 WeisBucks for Gold members, which will be deposited into your account for rewards redemption.</dd>
   <dt>4. Where do I go to make changes to my member profile?</dt>
-  <dd>Profile changes may be made by going to your MyWeis account click here . (redirect “ Back to MyWeis Account”)</dd>
+  <dd>Profile changes may be made by going to your MyWeis account click <%= link_to 'here.', current_profile %></dd>
   <dt>5. What purchases do not qualify for WeisRewards?</dt>
   <dd>Fuel and Prescription Drugs do not qualify to earn WeisBucks.</dd>
 </dl>
