--- a/app/views/home/faqs.html.erb
+++ b/app/views/home/faqs.html.erb
@@ -3,7 +3,7 @@
 <dl>
   <dt>How do I earn WeisBucks?</dt>
   <dd>For every qualifying dollar you spend at Weis Markets you will earn WeisBucks. 
-Silver Preferred Club Card members will earn 10% back in WeisBucks ($50 purchase = 5 WeisBucks).
+Club Card members will earn 10% back in WeisBucks ($50 purchase = 5 WeisBucks).
 Gold Card members will earn 30% back in WeisBucks ($50 purchase = 15 WeisBucks).</dd>
 
 <dt>What purchases do not qualify for WeisRewards?</dt>
@@ -14,7 +14,7 @@ Gold Card members will earn 30% back in WeisBucks ($50 purchase = 15 WeisBucks).
 <dd>No. Your purchases will only be posted to your rewards account by presenting your card (or providing the phone number associated with your account).</dd>
 
 <dt>When will my WeisBucks be deposited into my account?</dt>
-<dd>As soon as you spend $250 qualifying dollars you will earn 25 WeisBucks for Silver members or 75 for Gold members, which will be deposited into your account for rewards redemption.</dd>
+<dd>As soon as you spend $250 qualifying dollars you will earn 25 WeisBucks for Club members or 75 for Gold members, which will be deposited into your account for rewards redemption.</dd>
 
 <dt>How will I know how many WeisBucks I have earned and deposited for rewards redemption?</dt>
 <dd>Your account page will provide you with current WeisBucks earned and deposited for rewards redemption. You will also receive a monthly e-Statement showing current WeisBucks deposited, redeemed, and remaining.</dd>
