--- a/app/views/home/learn_more.html.erb
+++ b/app/views/home/learn_more.html.erb
@@ -3,12 +3,12 @@
 
 <p>Weis shoppers earn more...with WeisRewards. As a loyal card holder, earning rewards is simple and fast.  Shop, earn, and redeem your WiseBucks on over 200,000 exclusive member- only offers such as hotel stays, brand name merchandise, gift cards, and local offers.
 For every qualifying dollar that you spend at Weis Markets you will earn WeisBucks. 
-Silver Preferred Club Card members will earn 10% back in WeisBucks ($50 purchase = 5 WeisBucks).</p>
+Club Card members will earn 10% back in WeisBucks ($50 purchase = 5 WeisBucks).</p>
 
 <p>Gold Card members will earn 30% back in WeisBucks ($50 purchase = 15 WeisBucks).  
 WeisBucks will be displayed in your account and deposited once you have spent $250 qualifying dollars.</p>
 
-<p>Silver Preferred Club Card members will receive a deposit of 25 WeisBucks for every $250 qualifying dollars.</p>
+<p>Club Card members will receive a deposit of 25 WeisBucks for every $250 qualifying dollars.</p>
 
 <p>Gold Card members will receive a deposit of 75 WeisBucks for every $250 qualifying dollars.</p>
 
