Fix type in link to profile from customer service page

--- a/app/views/home/customer_service.html.erb
+++ b/app/views/home/customer_service.html.erb
@@ -10,7 +10,7 @@
   <dt>3. When will my WeisBucks be deposited into my account?</dt>
   <dd>As soon as you spend $250 qualifying dollars you will earn 25 WeisBucks for Club members or 75 WeisBucks for Gold members, which will be deposited into your account for rewards redemption.</dd>
   <dt>4. Where do I go to make changes to my member profile?</dt>
-  <dd>Profile changes may be made by going to your MyWeis account click <%= link_to 'here.', current_profile %></dd>
+  <dd>Profile changes may be made by going to your MyWeis account click <%= link_to 'here.', profile_path(current_profile.id) %></dd>
   <dt>5. What purchases do not qualify for WeisRewards?</dt>
   <dd>Fuel and Prescription Drugs do not qualify to earn WeisBucks.</dd>
 </dl>
