Clean up header text and color

--- a/app/assets/stylesheets/core/layout.scss
+++ b/app/assets/stylesheets/core/layout.scss
@@ -70,8 +70,8 @@ dl.has-login {
   float: right;
   line-height: .8rem;
   margin-top: $base-padding/2;
-  .gold {
-    color: $gold;
+  .red {
+    color: $red;
   }
 }
 
