--- a/app/views/admin/transactions/_failed_transaction.html.erb
+++ b/app/views/admin/transactions/_failed_transaction.html.erb
@@ -1,7 +1,7 @@
 <tr class='failed-transaction'>
   <td><%= failed_transaction.buyer_id       %></td>
   <td><%= failed_transaction.program_id     %></td>
-  <td><%= failed_transaction.user_id        %></td>
+  <td><%= failed_transaction.weis_id        %></td>
   <td><%= failed_transaction.deposit_amount %></td>
   <td><%= failed_transaction.deposit_amount %></td>
   <td><%= failed_transaction.description    %></td>
